<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DadosMedico">

    <TextView
        android:id="@+id/textView_medico_titulo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/rosa_cabeçalho"
        android:gravity="center"
        android:text="@string/principal_nome_medico"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editText_medico_nome"

        />

    <EditText
        android:id="@+id/editText_medico_nome"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/medico_name_hint"
        app:layout_constraintBottom_toTopOf="@id/editText_medico_logradouro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_medico_titulo"
        tools:layout_editor_absoluteY="88dp" />

    <EditText
        android:id="@+id/editText_medico_logradouro"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/medico_logradouro_hint"
        app:layout_constraintBottom_toTopOf="@id/editText_medico_end_numero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_medico_nome" />

    <EditText
        android:id="@+id/editText_medico_end_numero"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/medico_endnumero_hint"
        app:layout_constraintTop_toTopOf="@id/editText_medico_bairro"
        app:layout_constraintBottom_toBottomOf="@id/editText_medico_bairro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/editText_medico_bairro"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="194dp" />

    <EditText
        android:id="@+id/editText_medico_bairro"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/medico_bairro_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText_medico_end_numero"
        app:layout_constraintBottom_toTopOf="@id/editText_medico_cidade"
        app:layout_constraintTop_toBottomOf="@id/editText_medico_logradouro" />

    <EditText
        android:id="@+id/editText_medico_cidade"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/medico_cidade_hint"
        app:layout_constraintBottom_toTopOf="@+id/editText_medico_estado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_medico_bairro" />

    <EditText
        android:id="@+id/editText_medico_estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/medico_estado_hint"
        app:layout_constraintBottom_toTopOf="@+id/editText_medico_telefone"
        app:layout_constraintEnd_toStartOf="@+id/editText_medico_cep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_medico_cidade"
        />

    <EditText
        android:id="@+id/editText_medico_cep"
        android:layout_width="142dp"
        android:layout_height="43dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="21dp"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/medico_cep_hint"
        app:layout_constraintTop_toTopOf="@id/editText_medico_estado"
        app:layout_constraintBottom_toBottomOf="@id/editText_medico_estado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText_medico_estado"/>

    <EditText
        android:id="@+id/editText_medico_telefone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/medico_telefone_hint"
        app:layout_constraintBottom_toTopOf="@+id/editText_medico_celular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_medico_estado" />

    <EditText
        android:id="@+id/editText_medico_celular"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/medico_celular_hint"
        app:layout_constraintBottom_toTopOf="@+id/editText_medico_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_medico_telefone" />

    <EditText
        android:id="@+id/editText_medico_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/medico_email_hint"
        app:layout_constraintBottom_toTopOf="@+id/editText_medico_senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_medico_celular" />


    <EditText
        android:id="@+id/editText_medico_senha"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textVisiblePassword"
        android:hint="@string/medico_senha_hint"
        app:layout_constraintBottom_toTopOf="@+id/editText_medico_senha_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_medico_email" />

    <EditText
        android:id="@+id/editText_medico_senha_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textVisiblePassword"
        android:hint="@string/medico_senhaconfir_hint"
        app:layout_constraintTop_toBottomOf="@+id/editText_medico_senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_medico_cadastrar"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_medico_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_button_green"
        android:text="@string/medico_button"
        android:textAllCaps="false"
        android:textColor="#FFFF8D"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/editText_medico_senha_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>