<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CadastroPaciente">

    <TextView
        android:id="@+id/textView_paciente_titulo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/rosa_cabeçalho"
        android:gravity="center"
        android:text="@string/paciente_cadastro_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editText_paciente_nome"

        />



    <EditText
        android:id="@+id/editText_paciente_nome"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/paciente_name_hint"
        app:layout_constraintTop_toBottomOf="@id/textView_paciente_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editText_paciente_data_nascimento"
        tools:layout_editor_absoluteY="88dp" />

    <EditText
        android:id="@+id/editText_paciente_data_nascimento"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/paciente_data_nascimento_hint"
        app:layout_constraintTop_toBottomOf="@id/editText_paciente_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editText_paciente_telefone" />


    <EditText
        android:id="@+id/editText_paciente_telefone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/paciente_telefone_hint"
        app:layout_constraintTop_toBottomOf="@+id/editText_paciente_data_nascimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editText_paciente_celular"/>


    <EditText
        android:id="@+id/editText_paciente_celular"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/paciente_celular_hint"
        app:layout_constraintTop_toBottomOf="@+id/editText_paciente_telefone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editText_paciente_email"/>

    <EditText
        android:id="@+id/editText_paciente_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/paciente_email_hint"
        app:layout_constraintTop_toBottomOf="@+id/editText_paciente_celular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editText_paciente_senha"
        />


    <EditText
        android:id="@+id/editText_paciente_senha"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textVisiblePassword"
        android:hint="@string/paciente_senha_hint"
        app:layout_constraintTop_toBottomOf="@+id/editText_paciente_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editText_paciente_senha_confirm"/>


    <EditText
        android:id="@+id/editText_paciente_senha_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textVisiblePassword"
        android:hint="@string/paciente_senhaconfir_hint"
        app:layout_constraintTop_toBottomOf="@+id/editText_paciente_senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_paciente_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bg_button_green"
        android:text="@string/paciente_button"
        android:textAllCaps="false"
        android:textColor="#FFFF8D"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_paciente_senha_confirm"
        app:layout_constraintVertical_bias="0.050000012" />


</androidx.constraintlayout.widget.ConstraintLayout>