<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Agendar_consulta_paciente">


    <TextView
        android:id="@+id/textView_paciente_nome"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="5dp"
        android:background="@color/rosa_cabeçalho"
        android:gravity="center"
        android:text="@string/principal_nome_paciente"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editText_data_consulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/editText_data_consulta"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/cadastro_consulta_data"
        app:layout_constraintBottom_toTopOf="@id/editText_hora_consulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_paciente_nome"
        />

    <EditText
        android:id="@+id/editText_hora_consulta"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="time"
        android:hint="@string/cadastro_consulta_hora"
        app:layout_constraintBottom_toTopOf="@id/editText_duracao_consulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_data_consulta"
        />

    <EditText
        android:id="@+id/editText_duracao_consulta"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="time"
        android:hint="@string/cadastro_consulta_duracao"
        app:layout_constraintTop_toBottomOf="@id/editText_hora_consulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editText_nome_medico_consulta"
        />

    <EditText
        android:id="@+id/editText_nome_medico_consulta"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="time"
        android:hint="@string/principal_nome_medico"
        app:layout_constraintTop_toBottomOf="@id/editText_duracao_consulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editText_convenio_consulta"
        />

    <EditText
        android:id="@+id/editText_convenio_consulta"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="time"
        android:hint="@string/cadastro_consulta_convenio"
        app:layout_constraintTop_toBottomOf="@id/editText_nome_medico_consulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editText_valor_consulta"
        />

    <EditText
        android:id="@+id/editText_valor_consulta"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="time"
        android:hint="@string/cadastro_consulta_valor"
        app:layout_constraintTop_toBottomOf="@id/editText_convenio_consulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_medico_cadastrar"
        />






    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_medico_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_button_green"
        android:text="@string/agendamentos_confirmar_agendamento"
        android:textAllCaps="false"
        android:textColor="#FFFF8D"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/editText_valor_consulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>