<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.subcriber.Cadastro_consulta_medico">

    <TextView
        android:id="@+id/textView_medico_titulo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/rosa_cabeçalho"
        android:gravity="center"
        android:text="@string/principal_nome_medico"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editText_data_consulta"

        />

    <EditText
        android:id="@+id/editText_data_consulta"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/cadastro_consulta_data"
        app:layout_constraintBottom_toTopOf="@id/editText_hora_consulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_medico_titulo"
        tools:layout_editor_absoluteY="88dp" />

    <EditText
        android:id="@+id/editText_hora_consulta"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="time"
        android:hint="@string/cadastro_consulta_hora"
        app:layout_constraintBottom_toTopOf="@id/editText_duracao_consulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_data_consulta"
        tools:layout_editor_absoluteY="88dp" />

    <EditText
        android:id="@+id/editText_duracao_consulta"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/cadastro_consulta_duracao"
        app:layout_constraintBottom_toTopOf="@id/editText_medico_logradouro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_hora_consulta"
        tools:layout_editor_absoluteY="88dp" />

    <Spinner
        android:id="@+id/spinner_cadastro_consulta_status"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/cadastro_consulta_status"
        app:layout_constraintBottom_toTopOf="@id/editText_medico_logradouro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_duracao_consulta"
        tools:layout_editor_absoluteY="88dp" />


</androidx.constraintlayout.widget.ConstraintLayout>