<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PrincipalPaciente">

    <TextView
        android:id="@+id/textView_paciente_nome"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="5dp"
        android:background="@color/rosa_cabeçalho"
        android:gravity="center"
        android:text="@string/principal_nome_paciente"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txt_meus_dados"/>

    <TextView
        android:id="@+id/txt_meus_dados"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/bg_button_blue"
        android:text="@string/principal_meus_dados"
        android:textAlignment="center"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView_paciente_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txt_consultas"
        />

    <TextView
        android:id="@+id/txt_consultas"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="9dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/bg_button_blue"
        android:text="@string/principal_consultas"
        android:textAlignment="center"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/txt_meus_dados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txt_agendamentos"/>

    <TextView
        android:id="@+id/txt_agendamentos"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/bg_button_blue"
        android:text="@string/principal_agendamentos"
        android:textAlignment="center"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/txt_consultas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>